# SiteFinder

./: .env.example  .gitignore  ARCHITECTURE.md  FINAL_VALIDATION.md  PHASE1_REVIEW.md  PHASE2_REVIEW.md  README.md  ROADMAP_PHASE1.md  VALIDATION_SAMPLE.md  leads_d7_dentist.csv  pyproject.toml  report_d7_dentist.txt  sitefinder.db
scripts/: run_matrix.sh
sitefinder/: __init__.py  audit_pipeline.py  pipeline.py
sitefinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sitefinder/analyzer/: audit.py  htmlutils.py  models.py  snapshot.py
sitefinder/analyzer/checkers/: __init__.py  accessibility.py  base.py  booking.py  broken_links.py  contact.py  mobile.py  seo.py  (+2 more)
sitefinder/cli/: main.py
sitefinder/collector/: dedup.py  osm_source.py
sitefinder/config/: region.py  settings.py
sitefinder/core/: enums.py  interfaces.py  models.py
sitefinder/database/: repository.py  schema.sql
sitefinder/enricher/: places_enricher.py  runner.py
sitefinder/exporters/: csv_exporter.py
sitefinder/infra/: http.py  logging.py  rate_limit.py
sitefinder/lead_scoring/: models.py  scoring.py
sitefinder/reports/: audit_report.py  final_report.py  validation.py
sitefinder/website_checker/: presence.py
tests/: conftest.py
tests/fixtures/: overpass_dentist_1070.json
tests/unit/: test_audit.py  test_audit_pipeline.py  test_dedup.py  test_enrich_runner.py  test_exporter.py  test_models.py  test_osm_source.py  test_pipeline.py  test_places_enricher.py  test_presence.py  test_region.py  test_reports.py  test_repository.py  test_scoring.py
(+1 files in other folders)
